added creepy dancer button

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <title>Halloween Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
@@ -11,8 +11,10 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ShyDancer">shy dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="CreepyDancer">creepy dancer</a>
+      <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="CreepyDancer">line up</a> -->
     </div>
     <script src="src/init.js"></script>
   </body>
