--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,10 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/shyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/shyDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
