added script links for all dancers and removed creepy dancer

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Halloween Dance Party</title>
+    <title>Spider Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/shyDancer.js"></script>
+    <script src="src/bouncingDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <h1 class="title">bircle dance party</h1>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ShyDancer">shy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="CreepyDancer">creepy dancer</a>
-      <!-- <a href="#" class="addDancerButton" data-dancer-maker-function-name="CreepyDancer">line up</a> -->
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncingDancer">bouncing dancer</a>
+      <a href="#" id="lineUp">line up</a>
     </div>
     <script src="src/init.js"></script>
+    <script src="src/lineup.js"></script>
   </body>
 </html>
