--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,9 +16,11 @@
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="spec/shyDancerSpec.js"></script>
+  <script src="spec/creepyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
   <script src="src/shyDancer.js"></script>
+  <script src="src/creepyDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
