--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,13 +14,13 @@
       window.mochaPhantomJS ? mochaPhantomJS.run() : mocha.run();
     });
   </script>
-  <script src="spec/blinkyDancerSpec.js"></script>
   <script src="spec/shyDancerSpec.js"></script>
-  <script src="spec/creepyDancerSpec.js"></script>
+  <script src="spec/bouncingDancerSpec.js"></script>
+  <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
   <script src="src/shyDancer.js"></script>
-  <script src="src/creepyDancer.js"></script>
+  <script src="src/bouncingDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
