changed name of dance

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Circle Dance Party</title>
+    <title>Halloween Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="topbar">
-      <h1 class="title">circle dance party</h1>
+      <h1 class="title">spooky dance party</h1>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="ShyDancer">shy dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncingDancer">bouncing dancer</a>
