--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,10 +12,12 @@
   <body>
     <div class="topbar">
       <h1 class="title">spooky dance party</h1>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="ShyDancer">shy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BouncingDancer">bouncing dancer</a>
-      <a href="#" id="lineUp">line up</a>
+      <div class="buttons">
+        <button href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">blinky dancer</button>
+        <button href="#" class="addDancerButton" data-dancer-maker-function-name="ShyDancer">shy dancer</button>
+        <button href="#" class="addDancerButton" data-dancer-maker-function-name="BouncingDancer">bouncing dancer</button>
+        <button href="#" class="addDancerButton" id="lineUp">line up</button>
+      </div>
     </div>
     <script src="src/init.js"></script>
     <script src="src/lineup.js"></script>
